# vk_edu_goncharov

hw2/: .gitignore  CMakeLists.txt  README.md  apply_function.h  benchmark.cpp  build.ps1  test.cpp
hw2/Screens_n_results/: Screens_n_results.md
hw2/build2/: ALL_BUILD.vcxproj  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  benchmarks.vcxproj  hw2_processes_and_threads.sln  tests.vcxproj  tests.vcxproj.filters
hw2/build2/benchmarks.dir/Release/: benchmarks.exe.recipe
hw2/build2/benchmarks.dir/Release/benchmarks.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
hw2/build2/lib/Release/: gmock.lib  gmock_main.lib  gtest.lib  gtest_main.lib
hw2/build2/tests.dir/Release/: tests.exe.recipe
hw2/build2/tests.dir/Release/tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
hw2/build2/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
hw2/build2/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
hw2/build2/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
hw2/track/: README.md  apply_function.cpp  apply_function_benchmark.cpp  apply_function_tests.cpp
hw3/: README.md  benchmark.cpp  task.md  test.cpp  unbuffered_channel.h
hw3/Screens_n_results/: Res_description.md
hw3/build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  buffered_channel.sln  cmake_install.cmake  unbuffered_channel_benchmark.vcxproj  unbuffered_channel_benchmark.vcxproj.filters  unbuffered_channel_test.vcxproj
hw3/build2/lib/Release/: gmock.lib  gmock_main.lib  gtest.lib  gtest_main.lib
hw3/build2/unbuffered_channel_benchmark.dir/Release/: unbuffered_channel_benchmark.exe.recipe
hw3/build2/unbuffered_channel_benchmark.dir/Release/unbuffer.AAFE5CAA.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
hw3/build2/unbuffered_channel_test.dir/Release/: unbuffered_channel_test.exe.recipe
hw3/build2/unbuffered_channel_test.dir/Release/unbuffer.65E7403D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
hw4/: README.md  futex_condition_variable.h  futex_test  main.cpp
hw5/: CMakeLists.txt  README.md  cleanup_demo.cpp  consumer_demo.cpp  ipc_mpsc_queue.h  producer_demo.cpp  run_demo.sh
hw5/Screens_n_results/: Res_analytics.md
hw6/: README.md
hw6/Screens_n_results/: Res_analytics.md
hw6/hw61/: CMakeLists.txt  README.md  compile_check.cpp
hw6/hw62/: CMakeLists.txt  demo.cpp  future.h  process_demo.cpp  process_pool.h  process_worker.cpp  thread_pool.h
(+4 files in other folders)
